[project]
name = "second-brain-that-fights-you"
version = "0.1.0"
description = "An AI productivity system that challenges, contradicts, and interrogates you."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "httpx>=0.26.0",
    "pydantic>=2.6.0",
    "scikit-learn>=1.4.0",
    "uvicorn[standard]>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
